--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGO_URL = mongodb+srv://user1:user1@cluster0.velgd.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+ADMIN_USERNAME = admin
+ADMIN_PASSWORD = 123456
