--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@paypal/react-paypal-js": "^7.6.0",
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.26.1",
+    "cookie": "^0.5.0",
     "mongoose": "^6.3.1",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native-paypal": "^4.1.0",
     "react-redux": "^8.0.1",
+    "react-router-dom": "^6.3.0",
     "redux": "^4.2.0"
   },
   "devDependencies": {
